# cafe-calc

./: .build.yml  .travis.yml  AUTHORS  NEWS  README.md  autogen.sh  cafe-calc.pot  configure.ac  index.html  makepot  mate-calc.pot  output_581c5f681977006815b04a1cf82127841ca9e2ce  output_65d0dbc7b0d384f2aab62503f3c52a1dde82549b  output_83d458e37498d9ffe890da935cb8ea31b3c6df03  update-authors.pl
.tx/: config
2022-04-27-094623-14028-1@5c25d672d271_testci/: index.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f  report-1c32a4.html  report-3a746d.html  report-471a9d.html  report-61c6ca.html  report-631016.html  report-791292.html  report-cc0979.html  report-d07843.html  report-edd2d9.html
2022-04-27-102325-14030-1@5c25d672d271_testci/: index.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f  report-311405.html  report-41dc74.html  report-5f43cc.html  report-77da22.html  report-c87645.html  report-d761a2.html  report-e18508.html  report-f0c7a7.html  report-f8cb7c.html
2022-04-27-104021-14029-1@5c25d672d271_testci/: index.html  report-48bb00.html  report-73ab51.html  report-7403ad.html  report-7b31a7.html  report-81c1ec.html  report-882039.html  report-8a1a24.html  report-9ff47a.html  report-eef7f0.html
2022-04-27-104234-9204-cppcheck@5c25d672d271_testci/: 13.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f  stats.html
2022-04-27-105321-14033-1@5c25d672d271_testci/: index.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f  report-02ef1d.html  report-1b934c.html  report-323b76.html  report-5ba3f9.html  report-63f9d2.html  report-670ca8.html  report-876e55.html  report-c7c648.html  report-dc55c8.html
2022-04-27-105530-0254-cppcheck@5c25d672d271_testci/: 14.html  9.html
2022-04-27-110347-14027-1@5c25d672d271_testci/: commitmsg  index.html  report-1c4a71.html  report-355dca.html  report-4286fd.html  report-595218.html  report-9433c7.html  report-a27c2b.html  report-aa409e.html  report-c7be19.html  report-de0f7b.html
2022-04-27-110605-0594-cppcheck@5c25d672d271_testci/: 8.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f
2022-04-27-112332-14029-1@5c25d672d271_testci/: index.html  report-044da4.html  report-04a70e.html  report-2fb709.html  report-7dc0ef.html  report-8850ec.html  report-9c6612.html  report-f84896.html  report-fb7827.html  report-fbba04.html
2022-04-27-112518-2639-cppcheck@5c25d672d271_testci/: 11.html  15.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f
2022-04-27-113333-14027-1@5c25d672d271_testci/: index.html  output_5c25d672d271c7427f90c10c0c1c57d9453d794f  report-1baec1.html  report-1c2eb9.html  report-59d344.html  report-611346.html  report-6739a6.html  report-6f10c8.html  report-7609bd.html  report-77dde1.html  report-ca57fc.html
2022-04-27-113549-5991-cppcheck@5c25d672d271_testci/: 0.html  1.html  16.html  5.html  6.html  index.html
2022-04-27-114922-14088-1@13a7867c4f74_testci/: index.html  output_13a7867c4f744461a1fccc2a89010773a1b74652  report-2a5f53.html  report-3cdbf8.html  report-7f901b.html  report-95a1c2.html  report-b72a37.html  report-b8dce0.html  report-c64554.html  report-e70c97.html  report-ee351f.html
2022-04-27-115110-5406-cppcheck@13a7867c4f74_testci/: 3.html  4.html  7.html
2022-04-27-120322-14088-1@7ab66acfad61_master/: index.html  report-045391.html  report-18bfae.html  report-3b8a05.html  report-3e243b.html  report-577f94.html  report-a04d63.html  report-bf9ece.html  report-d516a3.html  report-f40311.html
2022-04-27-120532-7486-cppcheck@7ab66acfad61_master/: 10.html  output_7ab66acfad613cbf1478d4776c92e3b63ecbe518
2022-04-28-071009-14087-1@65d0dbc7b0d3_master/: index.html  report-094dd4.html  report-145a70.html  report-3f8710.html  report-5a39c0.html  report-80757c.html  report-91a4f0.html  report-a84e43.html  report-bf73f4.html  report-e698ab.html
2022-04-28-071157-4853-cppcheck@65d0dbc7b0d3_master/: 12.html  2.html
2022-08-14-154451-14198-1@d6b45f0b6c0e_build/: index.html  output_d6b45f0b6c0eab0ceb47bae00b69dfe3d79ca8d9  report-1d4839.html  report-397825.html  report-548981.html  report-60a9ec.html  report-720c65.html  report-90c61f.html  report-b1189a.html  report-c6ef06.html  report-eaa786.html
2022-08-14-154703-4089-cppcheck@d6b45f0b6c0e_build/: 1.html  11.html  13.html  3.html  7.html  commitmsg
2022-08-14-155523-14204-1@1de0f346a063_build/: index.html  output_1de0f346a063026762b93f9e77c60df445109a36  report-1d4839.html  report-397825.html  report-548981.html  report-60a9ec.html  report-720c65.html  report-90c61f.html  report-b1189a.html  report-c6ef06.html  report-eaa786.html
2022-08-14-155734-4822-cppcheck@1de0f346a063_build/: 14.html  5.html  6.html  8.html  index.html  stats.html
2022-08-14-161411-14202-1@7ac898337cd8_master/: index.html  report-1d4839.html  report-397825.html  report-548981.html  report-60a9ec.html  report-720c65.html  report-90c61f.html  report-b1189a.html  report-c6ef06.html  report-eaa786.html
2022-08-14-161559-2920-cppcheck@7ac898337cd8_master/: 0.html  10.html  12.html  15.html  16.html  2.html  4.html  9.html  commitmsg  output_7ac898337cd8ff6881b81a29eb74bb91101d1570
2022-12-29-234211-15618-1@c45159efba1e_updateci/: index.html  report-1d4839.html  report-397825.html  (+7 more)
data/: Makefile.am  cafe-calc-cmd.1  cafe-calc.1  cafe-calc.appdata.xml.in  cafe-calc.desktop.in  mate-calc-cmd.1  mate-calc.1  mate-calc.appdata.xml.in  mate-calc.desktop.in  org.mate.calc.gschema.xml
src/: Makefile.am  buttons-advanced.ui  buttons-basic.ui  buttons-financial.ui  buttons-programming.ui  cafe-calc-cmd.c  cafe-calc.about  cafe-calc.c  currency-manager.c  currency.c  financial.c  lexer.c  mate-calc.c  math-buttons.c  math-buttons.h  math-converter.c  math-converter.h  math-display.c  math-display.h  math-equation.c  math-equation.h  math-preferences.c  math-preferences.h  math-variable-popup.c  math-variable-popup.h  math-variables.c  math-window.c  math-window.h  mp-binary.c  mp-convert.c  mp-equation.c  mp.c  org.mate.calculator.gresource.xml  parser.c  parserfunc.c  preferences.ui  test-mp-equation.c  test-mp.c  unit-category.c  unit-manager.c  (+2 more)
(+733 files in other folders)
